updated author, repo and added README

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch"
   },
-  "author": "Cory House",
+  "author": "Danilo Rossi",
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "6.8.0",
@@ -67,6 +67,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/coryhouse/pluralsight-redux-starter"
+    "url": "https://github.com/danilorossi/react-redux-es6-template"
   }
 }
